@@ -1,5 +1,7 @@
 package at.gepardec.fachtracing.maven;
 
+import at.gepardec.fachtracing.analysis.ApplicationSourceBoundary;
+
 import java.io.IOException;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -10,6 +12,15 @@ import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
+import java.util.zip.ZipEntry;
+import java.util.zip.ZipOutputStream;
+
+import org.apache.maven.model.Build;
+import org.apache.maven.model.Model;
+import org.apache.maven.model.Plugin;
+import org.apache.maven.model.PluginExecution;
+import org.apache.maven.project.MavenProject;
+import org.codehaus.plexus.util.xml.Xpp3Dom;
 
 /** Dependency-free executable contracts for project graph generation. */
 public final class AnalyzeMojoTest {
@@ -25,10 +36,132 @@ public final class AnalyzeMojoTest {
         generatesParsedDeveloperJsonFromCleanRevision();
         validatesDeveloperOutputSettings();
         resolvesReactorSourcesWithoutGeneratingSiblingEntries();
+        preventsAggregateOutputCollisions();
+        extractsBoundedSourceArtifactsSafely();
+        readsEffectiveCompilerPluginConfiguration();
+        rejectsUnsupportedCompilerPluginConfiguration();
+        mapsExternalModuleOwnershipConfiguration();
         skipsSourceEmptyModuleWithReactorSources();
         skipsUnannotatedSources();
         enforcesStrictIncompleteCoverageAfterWritingArtifacts();
         createsSafeDeterministicSlugs();
+    }
+
+    private static void mapsExternalModuleOwnershipConfiguration() throws Exception {
+        Path root = Files.createTempDirectory("fachtracing-owned-source-config-");
+        Path descriptor = Files.writeString(root.resolve("module-info.java"), "module owned.rules { }");
+        Path binary = Files.write(root.resolve("owned.rules.jar"), new byte[]{1});
+        var origin = new ApplicationSourceBoundary.SourceOrigin(
+                ApplicationSourceBoundary.OriginKind.MAVEN_SOURCE,
+                "maven:example:owned-rules:1.0", "a".repeat(64));
+
+        var named = new ExternalModuleOwnershipConfiguration();
+        named.setIdentity(origin.identity());
+        named.setKind("named");
+        named.setModuleName("owned.rules");
+        named.setDescriptor(descriptor.toFile());
+        named.setSourceRoot(root.toFile());
+        assert named.matches(origin, root);
+        var namedOwnership = named.ownership(root);
+        assert namedOwnership.kind() == ApplicationSourceBoundary.ModuleOwnershipKind.NAMED : namedOwnership;
+        assert namedOwnership.descriptor().orElseThrow()
+                .equals(descriptor.toAbsolutePath().normalize()) : namedOwnership;
+
+        var automatic = new ExternalModuleOwnershipConfiguration();
+        automatic.setSourceRoot(root.toFile());
+        automatic.setKind("automatic");
+        automatic.setModuleName("owned.rules.auto");
+        automatic.setBinaryPath(binary.toFile());
+        var automaticOwnership = automatic.ownership(root);
+        assert automaticOwnership.kind() == ApplicationSourceBoundary.ModuleOwnershipKind.AUTOMATIC
+                : automaticOwnership;
+        assert automaticOwnership.binaryPath().orElseThrow()
+                .equals(binary.toAbsolutePath().normalize()) : automaticOwnership;
+    }
+
+    private static void readsEffectiveCompilerPluginConfiguration() throws Exception {
+        MavenProject project = compilerProject();
+        Path generated = project.getBasedir().toPath().resolve("target/generated/rules");
+        Xpp3Dom shared = configuration();
+        add(shared, "encoding", "UTF-8");
+        add(shared, "release", "${java.release}");
+        add(shared, "parameters", "true");
+        add(shared, "generatedSourcesDirectory", generated.toString());
+        Xpp3Dom arguments = add(shared, "compilerArgs", null);
+        add(arguments, "arg", "-Xlint:none");
+        Plugin plugin = compilerPlugin(shared);
+        PluginExecution execution = new PluginExecution();
+        execution.setId("default-compile");
+        Xpp3Dom executionConfiguration = configuration();
+        add(executionConfiguration, "enablePreview", "true");
+        execution.setConfiguration(executionConfiguration);
+        execution.addGoal("compile");
+        plugin.addExecution(execution);
+        project.getBuild().addPlugin(plugin);
+
+        Path dependency = Files.createTempDirectory("fachtracing-module-dependency");
+        var effective = MavenCompilerModelResolver.resolve(project, List.of(
+                Path.of(project.getBuild().getOutputDirectory()), dependency), true);
+
+        assert effective.compilerModel().release().equals("21") : effective;
+        assert effective.compilerModel().charset().equals(StandardCharsets.UTF_8) : effective;
+        assert effective.compilerModel().compilerArguments()
+                .equals(List.of("-Xlint:none", "--enable-preview", "-parameters")) : effective;
+        assert effective.compilerModel().modulePath().equals(List.of(dependency.toAbsolutePath().normalize()))
+                : effective;
+        assert effective.compileSourceRoots().contains(generated.toString()) : effective;
+    }
+
+    private static void rejectsUnsupportedCompilerPluginConfiguration() throws Exception {
+        MavenProject project = compilerProject();
+        Xpp3Dom configuration = configuration();
+        Xpp3Dom processors = add(configuration, "annotationProcessorPaths", null);
+        add(processors, "path", "example");
+        project.getBuild().addPlugin(compilerPlugin(configuration));
+        try {
+            MavenCompilerModelResolver.resolve(project, List.of(), false);
+            throw new AssertionError("annotation processor configuration was accepted");
+        } catch (IllegalArgumentException expected) {
+            assert expected.getMessage().contains("annotation processor settings") : expected;
+            assert expected.getMessage().contains("example:compiler-fixture") : expected;
+        }
+    }
+
+    private static MavenProject compilerProject() throws Exception {
+        Path base = Files.createTempDirectory("fachtracing-compiler-model");
+        Model model = new Model();
+        model.setModelVersion("4.0.0");
+        model.setGroupId("example");
+        model.setArtifactId("compiler-fixture");
+        model.setVersion("1.0.0");
+        Build build = new Build();
+        build.setDirectory(base.resolve("target").toString());
+        build.setOutputDirectory(base.resolve("target/classes").toString());
+        model.setBuild(build);
+        MavenProject project = new MavenProject(model);
+        project.setFile(base.resolve("pom.xml").toFile());
+        project.getProperties().setProperty("java.release", "21");
+        project.addCompileSourceRoot(base.resolve("src/main/java").toString());
+        return project;
+    }
+
+    private static Plugin compilerPlugin(Xpp3Dom configuration) {
+        Plugin plugin = new Plugin();
+        plugin.setGroupId("org.apache.maven.plugins");
+        plugin.setArtifactId("maven-compiler-plugin");
+        plugin.setConfiguration(configuration);
+        return plugin;
+    }
+
+    private static Xpp3Dom configuration() {
+        return new Xpp3Dom("configuration");
+    }
+
+    private static Xpp3Dom add(Xpp3Dom parent, String name, String value) {
+        Xpp3Dom child = new Xpp3Dom(name);
+        child.setValue(value);
+        parent.addChild(child);
+        return child;
     }
 
     private static void generatesBothFormatsAndIndexWithoutDeletingUnrelatedFiles() throws Exception {
@@ -154,7 +287,36 @@ public final class AnalyzeMojoTest {
         String index = Files.readString(output.resolve("index.md"));
         String diagram = Files.readString(output.resolve("reactor-approval-structure.mmd"));
         assert index.contains("reactor approval") && !index.contains("sibling entry") : index;
-        assert diagram.contains("candidate 1") && diagram.contains("candidate 2") : diagram;
+        assert diagram.contains("local decision rule") && diagram.contains("regional decision rule") : diagram;
+        assert !diagram.matches("(?s).*candidate [0-9]+.*") : diagram;
+    }
+
+    private static void preventsAggregateOutputCollisions() throws Exception {
+        Path sources = Files.createTempDirectory("fachtracing-collision-sources");
+        Path first = sources.resolve("FirstPolicy.java");
+        Path second = sources.resolve("SecondPolicy.java");
+        Files.writeString(first, """
+                import at.gepardec.fachtracing.api.FachTracing;
+                final class FirstPolicy {
+                    @FachTracing("same decision") boolean decide(int age) { return age >= 18; }
+                }
+                """);
+        Files.writeString(second, """
+                import at.gepardec.fachtracing.api.FachTracing;
+                final class SecondPolicy {
+                    @FachTracing("same decision") boolean decide(int score) { return score >= 10; }
+                }
+                """);
+        Path output = Files.createTempDirectory("fachtracing-collision-output");
+        var result = new ProjectGraphGenerator().generate(
+                List.of(first, second), CLASSPATH, StandardCharsets.UTF_8,
+                output, false, Optional.empty());
+        try (var files = Files.list(output)) {
+            long diagrams = files.filter(path -> path.getFileName().toString()
+                    .matches("same-decision-[0-9a-f]{8}-structure\\.mmd")).count();
+            assert diagrams == 2 : output;
+        }
+        assert result.graphCount() == 2 : result;
     }
 
     private static void skipsSourceEmptyModuleWithReactorSources() throws Exception {
@@ -165,6 +327,51 @@ public final class AnalyzeMojoTest {
                 StandardCharsets.UTF_8, output, false);
         assert result.skipped() && result.graphCount() == 0 : result;
         assert !Files.exists(output.resolve("old-structure.mmd"));
+    }
+
+    private static void extractsBoundedSourceArtifactsSafely() throws Exception {
+        var limits = new SourceInputResolver.ArchiveLimits(4, 128, 256);
+        Path safeArchive = sourceArchive(Map.of(
+                "example/Policy.java", "package example; final class Policy {}",
+                "META-INF/notice.txt", "notice"));
+        Path safeOutput = Files.createTempDirectory("fachtracing-safe-source-archive");
+        List<Path> sources = SourceInputResolver.extract(safeArchive, safeOutput, limits);
+        assert sources.size() == 1 : sources;
+        assert sources.getFirst().startsWith(safeOutput) : sources;
+        assert Files.readString(sources.getFirst()).contains("class Policy");
+
+        for (String unsafe : List.of("../escape.java", "/absolute.java", "folder\\escape.java")) {
+            Path archive = sourceArchive(Map.of(unsafe, "final class Escape {}"));
+            try {
+                SourceInputResolver.extract(archive,
+                        Files.createTempDirectory("fachtracing-unsafe-source-archive"), limits);
+                throw new AssertionError("unsafe archive entry was accepted: " + unsafe);
+            } catch (IllegalArgumentException expected) {
+                assert expected.getMessage().contains("archive entry") : expected.getMessage();
+            }
+        }
+
+        Path tooLarge = sourceArchive(Map.of("Large.java", "x".repeat(129)));
+        try {
+            SourceInputResolver.extract(tooLarge,
+                    Files.createTempDirectory("fachtracing-large-source-archive"), limits);
+            throw new AssertionError("oversized archive entry was accepted");
+        } catch (IllegalArgumentException expected) {
+            assert expected.getMessage().contains("too large")
+                    || expected.getMessage().contains("configured size") : expected.getMessage();
+        }
+    }
+
+    private static Path sourceArchive(Map<String, String> entries) throws IOException {
+        Path archive = Files.createTempFile("fachtracing-source-input", ".jar");
+        try (var output = new ZipOutputStream(Files.newOutputStream(archive))) {
+            for (Map.Entry<String, String> entry : entries.entrySet()) {
+                output.putNextEntry(new ZipEntry(entry.getKey()));
+                output.write(entry.getValue().getBytes(StandardCharsets.UTF_8));
+                output.closeEntry();
+            }
+        }
+        return archive;
     }
 
     private static void enforcesStrictIncompleteCoverageAfterWritingArtifacts() throws Exception {
